[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
custom-utils = "0.10.14"
floem_reactive = {git = "https://github.com/lapce/floem.git", rev = "cb62f933c7866c576c542fa615040376d54eb48a"}


[patch."https://github.com/lapce/floem.git"]
floem_reactive ={path = "../floem-fork/reactive"}